# cbtsv1

./: .gitignore  CLAIM_LEVELS.md  CONTRIBUTING.md  DEBUG_ANALYSIS.md  IMPLEMENTATION_SUMMARY_LEMMA3.md  LICENSE  Phase1_Import_Syntax_DepClosureHash_NamespaceReceipts_BuildPlan_v6_1.md  README.md  TGS.nllc  aeonic_clocks.py  aeonic_memory_bank.py  aeonic_memory_contract.py  aeonic_receipts.jsonl  aeonic_receipts.py  aml.py  apt_test.py  benchmark_rhs.py  compare_gr_tests_results.json  compiled_nir.json  compliance_report.json  compliance_report_new.json  debug_test.py  diagnostic_e1_analysis.json  diagnostic_flight_e1.json  diagnostic_stage_jumps_e1.json  diagnostic_time_levels.json  dt_sweep.py  final_compliance_report.json  gr_constraints_nsc.py  gr_gate_policy.nscb  gr_gauge_nsc.py  gr_geometry_nsc.py  inspect_receipts.py  minkowski_rhs.nscir.json  mms_nir.json  nsc_accuracy_test_results.json  nsc_enhanced_geometry_results.json  nsc_geometry_test_results.json  nsc_runtime_min.py  orchestrator_contract_memory.py  (+47 more)
.idx/: dev.nix
Coherence_Spec_v1_0/: README.md
Docs./: example_gr_solver.nllc  unified_clock_documentation.md
Project Data /: README.md
Technical Data/: 12_GLYPH_TAXONOMY.md  14_TRIASIS_GLYPH_CODEBOOK_NPA.md  30_PRAXICA_SPEC.md  42_AEONICA_RECEIPTS.md  GLLL_LEXICON_ADDITIONS_AND_CONTRACT.md  GML_LEXICON_ADDITIONS_AND_CONTRACT.md  aeonic_phaseloom_canon_spec_v1_0.md  canonical_symbol_dictionary_v1_0_1.md  coherence_mathematical_technical_data_sheet.md  coherence_thesis_extended_canon_v2_1.md  gr_lambda_time_scaling.md  gr_solver_api_reference.md  (+20 more)
(+572 files in other folders)
